# llm-native-research-artifacts

./: .gitignore  README.md  app.py  main.py  pyproject.toml
data/: sample_paper_1.txt  sample_paper_2.txt
data/autoresearch_artifacts/: compose_results.json  conversion_log.json  cross_compare_results.json  diff_results.json  evaluator_exp-2025-11-21.json  evaluator_exp-2025-11-30.json  evaluator_exp-2025-12-01.json  query_results.json  validation_report.md  vanilla_autoresearch.json
data/karpathy_artifacts/: compose_results.json  diff_results.json  karpathy_autoresearch_artifact.json  query_results.json  session_document.md  validation_report.md
demo/: compose_and_diff.py  convert_paper.py  query_artifact.py  run_benchmark.py  run_full_demo.py
docs/: design.md
examples/: example_experiment_artifact.json  example_method_comparison.json
scripts/: validate_autoresearch.py  validate_karpathy.py
src/lnra/: __init__.py
src/lnra/agent/: __init__.py  interface.py
src/lnra/benchmark/: __init__.py  runner.py
src/lnra/converter/: __init__.py  pipeline.py  prompts.py
src/lnra/schemas/: __init__.py  base.py  experiment.py  method_comparison.py
